# surrealpy

./: LICENSE  README.md  pyproject.toml
src/surrealpy/: __init__.py  cbor.py  models.py  surrealdb.py
tests/: test_base.py
